[project]
name = "ComfyUI-marigold-intrinsics-PaGeR-TensorRT"
description = "TensortRT Extension. This custom node pack only provides RT loaders and safetensors --> onnx --> rt conversion for Marigold IID and PaGeR ERP models."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["onnx", "tensorrt"]

[project.urls]
Repository = "https://github.com/Apache0ne/ComfyUI-marigold-intrinsics-PaGeR-TensorRT"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Apache0ne/ComfyUI-marigold-intrinsics-PaGeR-TensorRT/wiki"
"Bug Tracker" = "https://github.com/Apache0ne/ComfyUI-marigold-intrinsics-PaGeR-TensorRT/issues"

[tool.comfy]
PublisherId = "apacheone"
DisplayName = "ComfyUI-marigold-intrinsics-PaGeR-TensorRT"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

